--- a/style.css
+++ b/style.css
@@ -1,37 +1,25 @@
 .header {
     background-color: #1F2937;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
 }
 
-.top{
+.top, .header-1{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-betweeqn;
 }
 
 .logo {
     color: #F9FAF8;
     font-size: 24px;
-    /*border: 4px solid white;*/
     display: flex;
     padding: 0px;
     margin-left: 50px;
     margin-top: 10px;
 }
 
-.header-1 {
-    display: flex;
-    justify-content: space-between;
-}
-
-.header-div {
-    display: flex;
-    border: 4px solid white;
-}
-
 .head-img {
     display: flex;
     margin-right: 50px;
-    border: 4px solid white;
 }
 
 .head-div h1 {
@@ -51,7 +39,6 @@
 }
 
 .list-header{
-    /*border: 4px solid white;*/
     list-style-type: none;
     display: flex;
     gap: 25px;
@@ -63,4 +50,39 @@
     background-color: #3882F6;
     color: white;
     margin-left: 50px;
+    border-radius: 12px;
+    border-color: none;
+}
+
+.random-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.random-info .rand {
+    font-weight: 900;
+    font-size: 36px;
+    color: #1F2937;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.img-boxes {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0px 0px;
+}
+
+.img-boxes p {
+    text-align: center;
+    margin-top: 0px;
+}
+
+.img-boxes img {
+    border: 4px solid #1F2937;
+    border-radius: 12px;
+    margin-bottom: 0px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
