--- a/style.css
+++ b/style.css
@@ -66,12 +66,14 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    padding-top: 25px;
 }
 
 .img-boxes {
     display: flex;
     justify-content: center;
     margin: 20px 0px 0px;
+    padding-bottom: 70px;
 }
 
 .img-boxes p {
@@ -85,4 +87,29 @@
     margin-bottom: 0px;
     margin-left: 40px;
     margin-right: 40px;
+}
+
+.quote-sec {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding-top: 55px;
+    padding-bottom: 100px;
+}
+
+.quote-sec p {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    margin-bottom: 0px;
+}
+
+.author {
+    display: flex;
+    justify-content: right;
+    font-size: 24px;
+    margin-right: 300px;
+    margin-top: 0px;
 }
