--- a/style.css
+++ b/style.css
@@ -50,8 +50,9 @@
     background-color: #3882F6;
     color: white;
     margin-left: 50px;
-    border-radius: 12px;
+    border-radius: 4px;
     border-color: none;
+    border-width: 0;
 }
 
 .random-info {
@@ -112,4 +113,49 @@
     font-size: 24px;
     margin-right: 300px;
     margin-top: 0px;
+}
+
+.footer-box {
+    display: flex;
+    background-color: #3882F6;
+    border-radius: 12px;
+    margin: 100px;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.call {
+    color: white;
+    font-size: 24px;
+    margin-bottom: 0px;
+    padding-left: 20px;
+}
+
+.text {
+    font-size: 18px;
+    color: #F9FAF8;
+    margin-top: 0px;
+    padding-left: 20px;
+}
+
+.footer-box .sign-up-btn {
+    display: flex;
+}
+
+.sign-up-btn button {
+    background-color: #3882F6;
+    border-radius: 5px;
+    border-color: white;
+    color: white;
+    margin: 40px;
+    padding: 4px 25px;
+}
+
+.copyright {
+    display: flex;
+    justify-content: center;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    font-size: 12px;
+    padding: 20px;
 }
